- Reverted to 'border' property from 'box-shadow' property on focus for [Input](https://design.avayacloud.com/components/web/input-web) Components - Reverted to 'border' property from 'box-shadow' property on focus for [Selectbox](https://design.avayacloud.com/components/web/selectbox-web) Components - Tweaked global focus styles to prevent unwanted focus ring appearing on mouse click - Added missing RTL styles and spacing to [Left Navigation](https://design.avayacloud.com/components/web/left-nav-web) sub-elements - Tweaked visibility of Clear button in [Inputs](https://design.avayacloud.com/components/web/input-web) to avoid unwanted transparency effect - Adjusted width of Text [Inputs](https://design.avayacloud.com/components/web/input-web) to take width of container - Adjusted line height on [Input](https://design.avayacloud.com/components/web/input-web) Group Label elements - Adjusted colour of [Table](https://design.avayacloud.com/components/web/tables-web) row dividers on hover/select

--- a/neo/scss-update/elements/_input-icon.scss
+++ b/neo/scss-update/elements/_input-icon.scss
@@ -17,6 +17,10 @@
   .neo-input {
     flex-grow: 1;
 
+    &:focus {
+      // margin: -1px -1px;
+    }
+
     &:first-child {
       padding-right: $input-padding-x + $input-icon-size;
       @include rtl-selector {
